compra estr-com-sorteo3

--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2051">51</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-52">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2052">52</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-53">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2053">53</a>
         </button>
         <button class="Button-01">
@@ -327,7 +327,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2071">71</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-72">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2072">72</a>
         </button>
         <button class="Button-01">
@@ -336,7 +336,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2074">74</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-75">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2075">75</a>
         </button>
         <button class="Button-01">
@@ -387,7 +387,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2091">91</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-92">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2092">92</a>
         </button>
         <button class="Button-01">
@@ -399,7 +399,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2095">95</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01"id="b-96">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2096">96</a>
         </button>
         <button class="Button-01">
