--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2036">36</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-37">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2037">37</a>
         </button>
         <button class="Button-01">
@@ -321,7 +321,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2069">69</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-70">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2070">70</a>
         </button>
         <button class="Button-01">
