b-50-13-85 Amigas pipe - b-09-17 Aleja Gomez

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2049">49</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-50">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2050">50</a>
         </button>
         <button class="Button-01">
@@ -366,7 +366,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2084">84</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-85">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta;%2085">85</a>
         </button>
         <button class="Button-01">
