actualizando proximo sorteo

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </head>
     <div class="SpecialBox">
         <div class="containerSbox">
-            <br><b>Premio: $250.000.</b></p>
-            <p><b>Lunes 26 de agosto de 2024.</b></p>
+            <br><b>Premio: $260.000.</b></p>
+            <p><b>Miércoles 4 de septiembre de 2024.</b></p>
             <p>Con las <b>dos últimas</b> cifras de la Loteria El Saman de la Suerte.</p>
             <p><b>GANADOR:</b> 1:00 PM 🇨🇴</p>
         </div>
