Actualizando page sorteo 5 y 6

--- a/Strategy/Sorteos.html
+++ b/Strategy/Sorteos.html
@@ -71,6 +71,36 @@
                 </div>
             </table>
         </div>
+        <div class="Sorteo-5">
+            <table>
+                <h3>Sorteo Número | 5</h3>
+                <p>Mes: septiembre</p>
+                <p>Fecha de sorteo: 26/08/2024</p>
+                <p>Hora de sorteo: 1:00 pm Col</p>
+                <p>Número ganador: 32 - Acumulado para la siguiente fecha.</p>
+                <ul>
+                    <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
+                </ul>
+                <div class="Ganador-10J24">
+                    <img src="../images/Historico de Sorteos/Sorteo 26-08-24/S26082024.png">
+                </div>
+            </table>
+        </div>
+        <div class="Sorteo-6">
+            <table>
+                <h3>Sorteo Número | 6</h3>
+                <p>Mes: septiembre</p>
+                <p>Fecha de sorteo: 04/09/2024</p>
+                <p>Hora de sorteo: 1:00 pm Col</p>
+                <p>Número ganador: 33 - Acumulado para la siguiente fecha.</p>
+                <ul>
+                    <a href="https://www.colombia.com/loterias/saman-de-la-suerte">Consulte aquí Loteria El saman de la Suerte</a>
+                </ul>
+                <div class="Ganador-10J24">
+                    <img src="../images/Historico de Sorteos/Sorteo 4-09-2024/S12092024.png">
+                </div>
+            </table>
+        </div>
     </div>
     <footer class="footer">
         <p>© 2024 DailyWinColombia</p>
