No 36 Edilma Carvajal

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <button class="Button-01">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2035">35</a>
         </button>
-        <button class="Button-01">
+        <button class="Button-01" id="b-36">
             <a href="https://wa.me/573332450319?text=Hola,%20quiero%20comparar%20la%20boleta:%2036">36</a>
         </button>
         <button class="Button-01" id="b-37">
