agregando slogan al sitio web

--- a/index.html
+++ b/index.html
@@ -414,8 +414,9 @@
         <div class="space"></div>
     </div>
     <div class="social">
-        <p>¡Sabías que con la compra de tu boleta estás haciendo una contribución automática del 3% a fundaciones que se dedican al bienestar animal?</p>
-        <p>¡Únete a nosotros para hacer la diferencia!</p>   
+        <p>Cuando compras una boleta estas contribuyendo automáticamente con el 3% a fundaciones que se dedican al bienestar animal.</p>
+        <br></br>
+        <p>Simples, humanos y honestos.</p>   
     </div>
     <div class="CallToAction">
         <button class="comprar">
